fix alignement

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  vertical-align: middle !important;
 }
 
 html {
