--- a/src/pages/app/admin/gameinstances/gameInstances/gameinstances.module.css
+++ b/src/pages/app/admin/gameinstances/gameInstances/gameinstances.module.css
@@ -21,7 +21,7 @@
   font-size: 4rem;
   color: var(--label);
   font-weight: bold;
-  font-family: 'Helvetica 500';
+  font-family: "Helvetica 500";
 }
 .right {
   flex: 1.5;
@@ -63,12 +63,10 @@
 }
 .mainTopContainerLeft > div:nth-child(2) {
   color: var(--label);
-
 }
 .mainTopContainerLeft > div:nth-child(2) > a {
   font-size: 1.2rem;
   color: var(--label);
-
 }
 
 .mainTableContainer {
@@ -90,6 +88,7 @@
 .table_content thead {
   width: 100%;
   background-color: var(--light_black);
+
   /* background-color: var(--black); */
   /* position: sticky;
   top: 0;
@@ -104,6 +103,7 @@
   color: var(--primary);
   text-align: left;
   padding-left: 2rem;
+  vertical-align: middle !important;
 }
 .table_content tbody {
   margin-left: 1rem;
@@ -205,5 +205,5 @@
   cursor: pointer;
 }
 .inputStyleClass {
-  border: 1px solid #D1D1D1;
+  border: 1px solid #d1d1d1;
 }
