--- a/src/pages/app/admin/masters/masterlist/masterlist.module.css
+++ b/src/pages/app/admin/masters/masterlist/masterlist.module.css
@@ -15,7 +15,7 @@
   font-size: 4rem;
   color: var(--label);
   font-weight: bold;
-  font-family: 'Helvetica 500';
+  font-family: "Helvetica 500";
 }
 .right {
   flex: 1.5;
@@ -108,7 +108,6 @@
   height: 100%;
   width: 100%;
   background-color: var(--innerbackground);
-
 }
 /* Table container */
 .mainTableContainer {
@@ -128,6 +127,7 @@
 .table_content thead {
   width: 100%;
   background-color: var(--light_black);
+
   /* background-color: var(--black); */
   /* position: sticky;
       top: 0;
@@ -137,11 +137,13 @@
   font-size: 1.2rem;
   height: 3.4rem;
   font-weight: 600;
+  vertical-align: middle !important;
 }
 .table_content thead tr th {
   color: var(--primary);
   text-align: left;
   padding-left: 2rem;
+  vertical-align: middle !important;
 }
 
 .table_content tbody {
