--- a/src/pages/app/admin/questions/questionlist/questionlist.module.css
+++ b/src/pages/app/admin/questions/questionlist/questionlist.module.css
@@ -21,7 +21,7 @@
   font-size: 4rem;
   color: var(--label);
   font-weight: bold;
-  font-family: 'Helvetica 500';
+  font-family: "Helvetica 500";
 }
 .right {
   flex: 1.5;
@@ -68,10 +68,13 @@
   font-size: 1.2rem;
   text-align: left;
   width: 100%;
+  vertical-align: middle !important;
 }
 .table_content thead {
   width: 100%;
   background-color: var(--light_black);
+  vertical-align: middle !important;
+
   /* background-color: var(--black); */
   /* position: sticky;
       top: 0;
@@ -81,11 +84,13 @@
   font-size: 1.2rem;
   height: 3.4rem;
   font-weight: 600;
+  vertical-align: middle !important;
 }
 .table_content thead tr th {
   color: var(--primary);
   text-align: left;
   padding-left: 2rem;
+  vertical-align: middle !important;
 }
 
 .table_content tbody {
@@ -156,7 +161,6 @@
   z-index: 1; 
   height: inherit;
 } */
-
 
 .questions:hover {
   text-decoration: underline;
