--- a/src/pages/app/admin/scenarios/scenarios.module.css
+++ b/src/pages/app/admin/scenarios/scenarios.module.css
@@ -15,7 +15,7 @@
   font-size: 4rem;
   color: var(--label);
   font-weight: bold;
-  font-family: 'Helvetica 500';
+  font-family: "Helvetica 500";
 }
 .right {
   flex: 1.5;
@@ -52,10 +52,13 @@
   font-size: 1.2rem;
   text-align: left;
   width: 100%;
+  vertical-align: middle !important;
 }
 .table_content thead {
   width: 100%;
   background-color: var(--light_black);
+  vertical-align: middle !important;
+
   /* background-color: var(--black); */
   /* position: sticky;
     top: 0;
@@ -65,10 +68,12 @@
   font-size: 1.2rem;
   height: 3.4rem;
   font-weight: 600;
+  vertical-align: middle !important;
 }
 .table_content thead tr th {
   color: var(--primary);
   text-align: left;
+  vertical-align: middle !important;
   padding-left: 2rem;
 }
 
@@ -164,7 +169,6 @@
   background-color: #ffecbd;
   cursor: pointer;
   padding: 0;
-  
 }
 .circleSvg:hover {
   /* height: 2.4rem;
@@ -174,7 +178,6 @@
 .inputLabel {
   color: var(--input_label_dark);
 }
-
 
 /* pagination */
 
